<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="40dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/detail_img"
                android:layout_width="240dp"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/sololeveling" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:id="@+id/detail_title"
            android:text="@string/title"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="32sp"
            android:textColor = "@android:color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="12sp"
                android:textColor = "@color/colorSubtitle"
                android:text="@string/genre"/>

            <TextView
                android:id="@+id/detail_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="58dp"
                android:layout_toEndOf="@+id/genre"
                android:lineSpacingMultiplier="1"
                android:text="@string/detail_genre"
                android:textColor = "@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:textSize="12sp"
                android:textColor = "@color/colorSubtitle"
                android:text="@string/year"/>

            <TextView
                android:id="@+id/detail_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/year"
                android:textSize="12sp"
                android:lineSpacingMultiplier="1"
                android:textColor = "@android:color/white"
                android:text="@string/detail_year"/>



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="32dp">

            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:textSize="12sp"
                android:textColor = "@color/colorSubtitle"
                android:text="@string/rate"/>

            <TextView
                android:id="@+id/detail_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/rate"
                android:lineSpacingMultiplier="1"
                android:text="@string/detail_rate"
                android:textColor = "@android:color/white"
                android:textSize="12sp" />


        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="12sp"
            android:textColor = "@color/colorSubtitle"
            android:text="@string/sinopsis"/>


        <TextView
            android:id="@+id/detail_desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor = "@android:color/white"
            android:text="@string/sinopsis_desc"/>
        


    </LinearLayout>

</ScrollView>